[tool.poetry]
name = ""
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.3.0"
fastapi = "^0.81.0"
uvicorn = {extras = ["standard"], version = "^0.18.3"}

[tool.poetry.dev-dependencies]
black = "^22.6.0"
mypy = "^0.971"
isort = "^5.10.1"
pyproject-flake8 = "^0.0.1-alpha.5"
bandit = {extras = ["toml"], version = "^1.7.4"}
taskipy = "^1.10.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# black設定
# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html
[tool.black]
line-length = 119

# isort設定
# https://pycqa.github.io/isort/docs/configuration/options.html
[tool.isort]
profile = "black" # blackと競合するため
line_length = 119
include_trailing_comma = true
color_output = true

[tool.flake8]
max-line-length = 119
max-complexity = 10
extend-ignore = "E203" # blackと競合するため

# mypy設定
# https://mypy.readthedocs.io/en/stable/config_file.html?highlight=mypy.ini
[tool.mypy]
disallow_untyped_defs = true
check_untyped_defs = true
warn_unreachable = true
warn_return_any = true
ignore_missing_imports = true